5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1635_2447.log
== TEST (2019-04-10 14:16:28) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr >= pag) :
	o= pr - pag 
	print("troco de ", o)
	
else : 
	u= 
-- ERROR:
File "XXXX", line 9
    u= 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:51) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag) :
	x= pr - pag 
	print("Falta ", x)
	
else : 
	y= pag - pr
	print("Troco de ", y)
	
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:18:03) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag) :
	x= pr - pag 
	print("Falta ", x)
	
else : 
	y= pag - pr
	print("Troco de ", y)
	
-- EXECUTION TIME:
0.149077
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
